CAMEL-23264: Fix group+watermark bug, add docs, tests, and validation
- Fix index-based watermark producing wrong offset when combined with
  group(): track raw item count independently of chunk index
- Optimize double readCurrentWatermark() call by reusing exchange property
- Refactor watermark from Map<String,String> to ResumeStrategy SPI
- Add validation for errorThreshold range and watermarkKey/resumeStrategy
  completeness
- Add documentation for all new features (group, errorThreshold,
  maxFailedRecords, SplitResult, watermark tracking) to split-eip.adoc
- Document parallel processing limitations for errorThreshold
- Document concurrent exchange limitations for watermark tracking
- Add upgrade guide section for Split EIP enhancements
- Add tests: group+watermark, parallel+errorThreshold,
  group+errorThreshold, streaming+parallel+maxFailedRecords,
  streaming mode, validation, and ResumeStrategy test helper

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>